--- a/home.html
+++ b/home.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="content">
+    <div class="box">
+        <div class="box-inner">Box Item</div>
+        <div class="box-second">Box second</div>
+    </div>
+    <div class="box"></div>
+    <!-- <div class="content">
         <img src="images/freelance-desk.jpg" alt="A freelance desk" class="round-img">
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi eius sit eos tempora quo omnis magnam aliquid nesciunt, dolore soluta deserunt reprehenderit nam nulla tenetur modi officia nihil rem porro?
         Maxime laborum hic cupiditate suscipit officia dolorum optio magnam eos cum reiciendis recusandae iste, minus officiis consequuntur voluptatem ratione nemo ea, illum esse dicta molestiae, quaerat quia. Autem, commodi est.
@@ -83,6 +88,6 @@
             <h3>title 7</h3>
             <p>lorem</p>
         </article>
-    </div>
+    </div> -->
 </body>
 </html>
