feat: async js programming
callback
promises
async await

--- a/javascript-basics/index.html
+++ b/javascript-basics/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <h1>Learning Javascript ES1 - ESNext</h1>
+    <button onclick="alert('Clicked')">Click Me!</button>
 </body>
 </html>
