--- a/javascript-basics/index.html
+++ b/javascript-basics/index.html
@@ -6,9 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript Basics</title>
     <script src="scripts/main.js" defer></script>
+    <style>
+        .products {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 1em;
+        }
+        .product {
+            padding: 1em;
+            background-color: #1a1a1a;
+            border: 1px solid #f5f5f5;
+            border-radius: 0.25em;
+        }
+        .product__title {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            font-size: 1.5rem;
+            color: blanchedalmond;
+            margin: 0 0 1em;
+        }
+    </style>
 </head>
 <body>
     <h1>Learning Javascript ES1 - ESNext</h1>
     <button onclick="alert('Clicked')">Click Me!</button>
+    <button onclick="fetchProducts()">Fetch Products</button>
+    <button onclick="fetchProductsNew()">Fetch Products New</button>
 </body>
 </html>
